--- a/Console/App.config
+++ b/Console/App.config
@@ -4,7 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
   <connectionStrings>
-    <add name="Recrutment" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=MyDb-DOTNETPI;Integrated Security=True"
+    <add name="Recrutment" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=MyDb-DOTNETPI1;Integrated Security=True"
       providerName="System.Data.SqlClient"/>
   </connectionStrings>
  
