--- a/Solution.Data/App.config
+++ b/Solution.Data/App.config
@@ -7,7 +7,7 @@
     requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="Recrutment" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=MyDb-DOTNETPI;Integrated Security=True"
+    <add name="Recrutment" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=MyDb-DOTNETPI1;Integrated Security=True"
       providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <entityFramework>
