--- a/Solution.Service/Solution.Service.csproj
+++ b/Solution.Service/Solution.Service.csproj
@@ -43,10 +43,16 @@
   <ItemGroup>
     <Compile Include="CandidateService.cs" />
     <Compile Include="Class1.cs" />
+    <Compile Include="CompanyService.cs" />
+    <Compile Include="EventService.cs" />
     <Compile Include="ExperienceService.cs" />
     <Compile Include="ICandidatService.cs" />
+    <Compile Include="ICompanyService.cs" />
+    <Compile Include="IEventService.cs" />
     <Compile Include="IExperienceService.cs" />
+    <Compile Include="IOfferService.cs" />
     <Compile Include="ISkillService.cs" />
+    <Compile Include="OfferService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SkillService.cs" />
   </ItemGroup>
