--- a/Solution.Data/Solution.Data.csproj
+++ b/Solution.Data/Solution.Data.csproj
@@ -72,6 +72,10 @@
     <Compile Include="Migrations\201911101732322_migration2.designer.cs">
       <DependentUpon>201911101732322_migration2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201911101830041_migration21.cs" />
+    <Compile Include="Migrations\201911101830041_migration21.designer.cs">
+      <DependentUpon>201911101830041_migration21.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="MyContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -92,6 +96,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201911101732322_migration2.resx">
       <DependentUpon>201911101732322_migration2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201911101830041_migration21.resx">
+      <DependentUpon>201911101830041_migration21.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
