--- a/Solution.Data/Solution.Data.csproj
+++ b/Solution.Data/Solution.Data.csproj
@@ -40,6 +40,9 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.3.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="PagedList, Version=1.17.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.1.17.0.0\lib\net40\PagedList.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -53,6 +56,7 @@
   <ItemGroup>
     <Compile Include="Class1.cs" />
     <Compile Include="Configurations\CandidateConfiguration.cs" />
+    <Compile Include="Configurations\CommentConfiguration.cs" />
     <Compile Include="Configurations\CompanyConfiguration.cs" />
     <Compile Include="Configurations\PostConfiguration.cs" />
     <Compile Include="Configurations\QuizConfiguration.cs" />
@@ -64,17 +68,9 @@
     <Compile Include="Infrastructures\IUnitOfWork.cs" />
     <Compile Include="Infrastructures\RepositoryBase.cs" />
     <Compile Include="Infrastructures\UnitOfWork.cs" />
-    <Compile Include="Migrations\201911101652103_migration1.cs" />
-    <Compile Include="Migrations\201911101652103_migration1.designer.cs">
-      <DependentUpon>201911101652103_migration1.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201911101732322_migration2.cs" />
-    <Compile Include="Migrations\201911101732322_migration2.designer.cs">
-      <DependentUpon>201911101732322_migration2.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201911101830041_migration21.cs" />
-    <Compile Include="Migrations\201911101830041_migration21.designer.cs">
-      <DependentUpon>201911101830041_migration21.cs</DependentUpon>
+    <Compile Include="Migrations\201911101948355_firstmig.cs" />
+    <Compile Include="Migrations\201911101948355_firstmig.designer.cs">
+      <DependentUpon>201911101948355_firstmig.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="MyContext.cs" />
@@ -91,20 +87,14 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201911101652103_migration1.resx">
-      <DependentUpon>201911101652103_migration1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201911101732322_migration2.resx">
-      <DependentUpon>201911101732322_migration2.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201911101830041_migration21.resx">
-      <DependentUpon>201911101830041_migration21.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201911101948355_firstmig.resx">
+      <DependentUpon>201911101948355_firstmig.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+      <ErrorText>Ce projet fait référence à des packages NuGet qui sont manquants sur cet ordinateur. Utilisez l'option de restauration des packages NuGet pour les télécharger. Pour plus d'informations, consultez http://go.microsoft.com/fwlink/?LinkID=322105. Le fichier manquant est : {0}.</ErrorText>
     </PropertyGroup>
     <Error Condition="!Exists('..\packages\EntityFramework.6.3.0\build\EntityFramework.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EntityFramework.6.3.0\build\EntityFramework.props'))" />
     <Error Condition="!Exists('..\packages\EntityFramework.6.3.0\build\EntityFramework.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EntityFramework.6.3.0\build\EntityFramework.targets'))" />
