--- a/Solution.Presentation/Solution.Presentation.csproj
+++ b/Solution.Presentation/Solution.Presentation.csproj
@@ -49,6 +49,12 @@
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.0\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="PagedList, Version=1.17.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.1.17.0.0\lib\net40\PagedList.dll</HintPath>
+    </Reference>
+    <Reference Include="PagedList.Mvc, Version=4.5.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.Mvc.4.5.0.0\lib\net40\PagedList.Mvc.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -184,12 +190,14 @@
     <Compile Include="Controllers\ApplicationController.cs" />
     <Compile Include="Controllers\AvailabilityController.cs" />
     <Compile Include="Controllers\CandidateController.cs" />
+    <Compile Include="Controllers\CommentController.cs" />
     <Compile Include="Controllers\CompanyController.cs" />
     <Compile Include="Controllers\EventController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\InterviewController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\OfferController.cs" />
+    <Compile Include="Controllers\PostController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -200,6 +208,7 @@
     <Compile Include="Models\Candidat.cs" />
     <Compile Include="Models\CandidateVM.cs" />
     <Compile Include="Models\CertificationVM.cs" />
+    <Compile Include="Models\CommentVM.cs" />
     <Compile Include="Models\CompanyVM.cs" />
     <Compile Include="Models\ContactVM.cs" />
     <Compile Include="Models\DiplomaVM.cs" />
@@ -210,6 +219,7 @@
     <Compile Include="Models\LangageVM.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\OfferVM.cs" />
+    <Compile Include="Models\PostVM.cs" />
     <Compile Include="Models\SkillVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -2985,6 +2995,7 @@
     <Content Include="Content\less\css\business-layout.css" />
     <Content Include="Content\main-style.css" />
     <Content Include="Content\owl.carousel.css" />
+    <Content Include="Content\PagedList.css" />
     <Content Include="Content\style.css" />
     <Content Include="Content\Uploads\61045987_2508306382545949_294514652040134656_n%282%29.jpg" />
     <Content Include="favicon.ico" />
@@ -3333,6 +3344,14 @@
     <Content Include="Views\Offer\Index.cshtml" />
     <Content Include="Views\Shared\_CompanyList.cshtml" />
     <Content Include="Views\Shared\_LayoutMayssa.cshtml" />
+    <Content Include="Views\Comment\Create.cshtml" />
+    <Content Include="Views\Comment\Delete.cshtml" />
+    <Content Include="Views\Comment\Edit.cshtml" />
+    <Content Include="Views\Post\Create.cshtml" />
+    <Content Include="Views\Post\Delete.cshtml" />
+    <Content Include="Views\Post\Details.cshtml" />
+    <Content Include="Views\Post\Edit.cshtml" />
+    <Content Include="Views\Post\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
