--- a/Solution.Service/Solution.Service.csproj
+++ b/Solution.Service/Solution.Service.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PagedList, Version=1.17.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.1.17.0.0\lib\net40\PagedList.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -45,20 +48,24 @@
     <Compile Include="AvailabilityService.cs" />
     <Compile Include="CandidateService.cs" />
     <Compile Include="Class1.cs" />
+    <Compile Include="CommentService.cs" />
     <Compile Include="IApplicationService.cs" />
     <Compile Include="IAvailabilityService.cs" />
     <Compile Include="CompanyService.cs" />
     <Compile Include="EventService.cs" />
     <Compile Include="ExperienceService.cs" />
     <Compile Include="ICandidatService.cs" />
+    <Compile Include="ICommentService.cs" />
     <Compile Include="ICompanyService.cs" />
     <Compile Include="IEventService.cs" />
     <Compile Include="IInterviewService.cs" />
     <Compile Include="InterviewService.cs" />
     <Compile Include="IExperienceService.cs" />
     <Compile Include="IOfferService.cs" />
+    <Compile Include="IPostService.cs" />
     <Compile Include="ISkillService.cs" />
     <Compile Include="OfferService.cs" />
+    <Compile Include="PostService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SkillService.cs" />
   </ItemGroup>
@@ -75,6 +82,9 @@
       <Project>{8a030dfd-25a9-4239-b02f-da5eb30950ec}</Project>
       <Name>Solution.Domain</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
